src/test/deca/syntax/invalid/semi5.deca
//Description
//    Vérifier la considération des points virgules
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
a = a + 3
}
